# FSMx

./: .gitignore  LICENSE  README.md  pyproject.toml  tests.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yml
fsmx/: __init__.py  core.py  exceptions.py  fsm_types.py  tools.py  utils.py
tests/: test_async.py
