
[project]
name = "fsmx"
version = "0.3.0"
description = "A Sophisticated state machine implementation in Python. It's NOT just a FSM, it's a FSM, PDA, Statechart, Async|Sync and Hooks driven engine."
readme = "README.md"
requires-python = ">=3.14"
license.text = "MIT License"
authors = [
    { name = "Sheñey", email = "sheneyby2010@gmail.com" }
]
dependencies = [
    "rich",
    "graphviz"
]
keywords = [
    "fsm",
    "pda",
    "state machine",
    "statechart",
    "async",
    "sync",
    "hooks",
    "event-driven",
]
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.14"
]

[project.urls]
Homepage = "https://github.com/sheniey/fsmx"
Repository = "https://github.com/sheniey/fsmx"
Issues = "https://github.com/sheniey/fsmx/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
